--- a/7-dot/www-source/style.css
+++ b/7-dot/www-source/style.css
@@ -2,6 +2,7 @@
 /* mixins */
 /* define rules */
 body {
+  color: white; 
   background-color: black;
   margin: 0px; }
 
@@ -26,6 +27,10 @@ footer .center {
   button:focus {
     outline:0;
   }
+
+input[type="text"] {
+    width: 50px;
+}
 
 
 .point {
